--- a/python/config.json.template
+++ b/python/config.json.template
@@ -1,2 +1,2 @@
 #REMOVE LINE 1 WHEN DONE - please fill out all details for the json file as a config and rename to config.json 
-{ "api": "", "database": { "username": "", "name": "", "password": "" }, "developer": "True/False"}
+{"websiteRoot": "PLEASE do not Include a / at the end so /foo/bar/ should be /foo/bar"}
