--- a/python/config.json.template
+++ b/python/config.json.template
@@ -1,2 +1,2 @@
 #REMOVE LINE 1 WHEN DONE - please fill out all details for the json file as a config and rename to config.json 
-{"websiteRoot": "PLEASE do not Include a / at the end so /foo/bar/ should be /foo/bar"}
+{"websiteRoot": "PLEASE do Include a / at the end so /foo/bar should be /foo/bar/"}
