--- a/html/config.json.template
+++ b/html/config.json.template
@@ -1,2 +1,2 @@
 #REMOVE LINE 1 WHEN DONE - please fill out all details for the json file as a config and rename to config.json 
-{ "api": "", "database": { "username": "", "name": "", "password": "" }, "developer": "True/False"}
+{ "api": "", "database": { "username": "", "name": "", "password": "" }, "developer": true/false Reminder that there should be no quotation marks(This should be a boolean)}
