--- a/html/.htaccess
+++ b/html/.htaccess
@@ -13,9 +13,6 @@
 </IfModule>
 #Will redirect from all json files
 RedirectMatch 403 \.(json)$
-#All invalid sites are directed to the main page index.php
-ErrorDocument 403 /index.php
-ErrorDocument 404 /index.php
 
 # Used to reomve the index.php from url
 Options +FollowSymlinks -Indexes
@@ -27,3 +24,7 @@ RewriteRule ^ %1 [L,R=301,NE]
 RewriteCond %{THE_REQUEST} /index\.php [NC]
 RewriteCond %{REQUEST_URI} ^(.*/)index\.php$ [NC]
 RewriteRule ^ %1 [L,R=301,NE]
+#Used to only allow certain ip addresses. This is a list of cloudflares and internal ip addresses
+<RequireAll>
+   Require ip 127.0.0.1 192.168.0.0/16 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 172.64.0.0/13 131.0.72.0/22 104.16.0.0/13 104.24.0.0/14 2400:cb00::/32 2606:4700::/32 2803:f800::/32 2405:b500::/32 2405:8100::/32 2a06:98c0::/29 2c0f:f248::/32
+</RequireAll>
