--- a/html/config.json.template
+++ b/html/config.json.template
@@ -1,2 +1,2 @@
 #REMOVE LINE 1 WHEN DONE - please fill out all details for the json file as a config and rename to config.json 
-{ "api": "youtube api key", "database": { "username": "", "name": "", "password": "" }, "developer": true/false Reminder that there should be no quotation marks(This should be a boolean), "throttle":the amount of requests allowed per minute, "loginThrottle":The amount of requests a login counts as}
+{ "api": "youtube api key", "database": { "username": "", "name": "", "password": "" }, "developer": true/false Reminder that there should be no quotation marks(This should be a boolean), "throttle":the amount of requests allowed per time period, "throttleTime":The number of seconds allowed for the throttle time period}
