Switched from html5 to pwa

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ maintenance-mode
 !logTypes.json
 python/config.json
 error.txt
-/html/space3/html5
+/html/space3/pwa
+/html/space3/macos.zip
+/html/space3/windows.zip
