--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,16 +1,18 @@
-<IfModule mod_rewrite.c> # Will check if maintenance mode is enabled and will redirect to maintenance.php if that is true
-   # activate mod_rewrite
-   RewriteEngine On
- 
-   # check if a file exists called "maintenance-mode-on" in the document root
-   RewriteCond %{DOCUMENT_ROOT}/maintenance-mode -f
- 
+# activate mod_rewrite
+RewriteEngine On
+
+# check if a file exists called "maintenance-mode-on" in the document root
+RewriteCond %{DOCUMENT_ROOT}/maintenance-mode -f
+
+# safety check to prevent redirect loops 
    # safety check to prevent redirect loops 
-   RewriteCond %{REQUEST_URI} !/maintenance.php$
-   
+# safety check to prevent redirect loops 
+RewriteCond %{REQUEST_URI} !/maintenance.php$
+
+# redirect internally all requests to maintenance.php 
    # redirect internally all requests to maintenance.php 
-   RewriteRule $ /maintenance.php [L]
-</IfModule>
+# redirect internally all requests to maintenance.php 
+RewriteRule $ /maintenance.php [L]
 #Will redirect from confidential files
 <Files config.json>
    order allow,deny
@@ -32,5 +34,5 @@ RewriteCond %{REQUEST_URI} ^(.*/)index\.php$ [NC]
 RewriteRule ^ %1 [L,R=301,NE]
 #Used to only allow certain ip addresses. This is a list of cloudflares and internal ip addresses
 <RequireAll>
-   Require ip 0.0.0.0/8 10.0.0.0/8 127.0.0.0/8 192.0.0.0/24 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 172.64.0.0/13 131.0.72.0/22 104.16.0.0/13 104.24.0.0/14 2400:cb00::/32 2606:4700::/32 2803:f800::/32 2405:b500::/32 2405:8100::/32 2a06:98c0::/29 2c0f:f248::/32
+   Require ip 172.0.0.0/8 0.0.0.0/8 10.0.0.0/8 127.0.0.0/8 192.0.0.0/24 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 172.64.0.0/13 131.0.72.0/22 104.16.0.0/13 104.24.0.0/14 2400:cb00::/32 2606:4700::/32 2803:f800::/32 2405:b500::/32 2405:8100::/32 2a06:98c0::/29 2c0f:f248::/32
 </RequireAll>
