--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,3 +1,5 @@
+ErrorDocument 404 /notFound.php
+# Will check if maintenance mode is enabled and will redirect to maintenance.php if that is true
 # activate mod_rewrite
 RewriteEngine On
 
@@ -22,16 +24,7 @@ RewriteRule $ /maintenance.php [L]
    order allow,deny
    deny from all
 </Files>
-# Used to reomve the index.php from url
-Options +FollowSymlinks -Indexes
-RewriteBase /
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ %1 [L,R=301,NE]
-RewriteCond %{THE_REQUEST} /index\.php [NC]
-RewriteCond %{REQUEST_URI} ^(.*/)index\.php$ [NC]
-RewriteRule ^ %1 [L,R=301,NE]
+
 #Used to only allow certain ip addresses. This is a list of cloudflares and internal ip addresses
 <RequireAll>
    Require ip 172.0.0.0/8 0.0.0.0/8 10.0.0.0/8 127.0.0.0/8 192.0.0.0/24 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 172.64.0.0/13 131.0.72.0/22 104.16.0.0/13 104.24.0.0/14 2400:cb00::/32 2606:4700::/32 2803:f800::/32 2405:b500::/32 2405:8100::/32 2a06:98c0::/29 2c0f:f248::/32
