Added an update text

--- a/html/.htaccess
+++ b/html/.htaccess
@@ -28,6 +28,10 @@ RewriteRule $ /maintenance.php [L]
    order allow,deny
    deny from all
 </Files>
+<Files updateInfo.log>
+   order allow,deny
+   deny from all
+</Files>
 
 #Used to only allow certain ip addresses. This is a list of cloudflares and internal ip addresses
 <RequireAll>
