--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ python/__pycache__/
 *.pyc
 maintenance-mode
 !logTypes.json
-python/config.json
+!python/config.json
 error.log
 /html/space3/pwa
 /html/space3/macos.zip
