--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ python/__pycache__/
 maintenance-mode
 !logTypes.json
 error.log
-/html/gameData
+/html/gameData/*
+!/html/gameData/secret.env
 /python/fix2.sql
 /html/updateInfo.log
 /html/restore.json
