--- a/html/composer.json
+++ b/html/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "phpmailer/phpmailer": "6.6.*"
+        "phpmailer/phpmailer": "6.6.*",
+        "fzaninotto/faker": "1.5"
     }
 }
