Removes faker as a dependency

--- a/html/composer.json
+++ b/html/composer.json
@@ -1,6 +1,5 @@
 {
     "require": {
-        "phpmailer/phpmailer": "6.6.*",
-        "fzaninotto/faker": "1.9.2"
+        "phpmailer/phpmailer": "6.6.*"
     }
 }
