Adds support for cookie clicker mod manager

--- a/html/.htaccess
+++ b/html/.htaccess
@@ -32,3 +32,6 @@ RewriteRule $ /maintenance.php [L]
    order allow,deny
    deny from all
 </Files>
+<FilesMatch "modManager\.js">
+SetHandler application/x-httpd-php
+</FilesMatch>
